--- a/clouddisk/public/index.html
+++ b/clouddisk/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
 	<link rel="stylesheet" href="static/bootstrap.min.css" type="text/css">
+	<link rel="stylesheet" href="static/icon/iconfont.css" type="text/css">
   </head>
   <body>
     <noscript>
